--- a/services.html
+++ b/services.html
@@ -53,8 +53,8 @@
   <h2>Sample Artworks</h2>
   <p>Take a glimpse of my portfolio showcasing passion and artistry</p>
   <div class="artworks-grid">
-    <div class="artwork-item" data-image="artwork1.png">
-      <img src="artwork1.png" alt="Artwork 1">
+    <div class="artwork-item" data-image="artwork1.PNG">
+      <img src="artwork1.PNG" alt="Artwork 1">
     </div>
     <div class="artwork-item" data-image="artwork2.jpg">
       <img src="artwork2.jpg" alt="Artwork 2">
@@ -65,17 +65,17 @@
     <div class="artwork-item" data-image="artwork4.jpg">
       <img src="artwork4.jpg" alt="Artwork 4">
     </div>
-    <div class="artwork-item" data-image="artwork5.png">
-      <img src="artwork5.png" alt="Artwork 5">
+    <div class="artwork-item" data-image="artwork5.PNG">
+      <img src="artwork5.PNG" alt="Artwork 5">
     </div>
-    <div class="artwork-item" data-image="artwork6.png">
-      <img src="artwork6.png" alt="Artwork 6">
+    <div class="artwork-item" data-image="artwork6.PNG">
+      <img src="artwork6.PNG" alt="Artwork 6">
     </div>
 	<div class="artwork-item" data-image="icon1.jpg">
       <img src="icon1.jpg" alt="Artwork 7">
     </div>
-	<div class="artwork-item" data-image="icon4.jpg">
-      <img src="icon4.jpg" alt="Artwork 8">
+	<div class="artwork-item" data-image="icon4.JPG">
+      <img src="icon4.JPG" alt="Artwork 8">
     </div>
 	<div class="artwork-item" data-image="icon3.png">
       <img src="icon3.png" alt="Artwork 9">
